[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-listening-pipeline"
version = "0.1.0"
description = "Scaffold for a social listening pipeline for clustering and topic extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.20.0",
    "sentence-transformers>=3.0.0",
    "umap-learn>=0.5.0",
    "hdbscan>=0.8.0",
    "numpy>=1.24.0",
    "transformers>=4.40.0",
    "torch>=2.1.0",
    "sentencepiece>=0.1.99",
    "protobuf>=4.25.0",
    "tiktoken>=0.7.0",
    "fugashi>=1.3.0",
    "unidic-lite>=1.0.8",
    "sudachipy>=0.6.8",
    "sudachidict-core>=20230927",
]

[project.scripts]
social-listening = "social_listening_pipeline.cli:main"
yahoo-realtime-scrape = "collector.yahoo_realtime:main"
preprocess-posts = "preprocessing.pipeline:main"
run-analysis = "analysis.pipeline:main"
generate-report = "reporting.generator:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
